--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,36 @@
+attrs==21.2.0
+Brotli==1.0.9
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+ConfigArgParse==1.5.3
+Flask==2.0.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+gevent==21.8.0
+geventhttpclient==1.5.3
+greenlet==1.1.2
+idna==3.3
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.2
+locust==2.4.1
+MarkupSafe==2.0.1
+msgpack==1.0.2
+packaging==21.0
+pluggy==1.0.0
+psutil==5.8.0
+py==1.10.0
+pyparsing==3.0.1
+pytest==6.2.5
+pytest-flask==1.2.0
+pyzmq==22.3.0
+requests==2.26.0
+roundrobin==0.0.2
+six==1.16.0
+toml==0.10.2
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+Werkzeug==2.0.2
+zope.event==4.5.0
+zope.interface==5.4.0
